# data-spear

./: .env.example  Dockerfile  README.md  claude_desktop_config.example.json  docker-compose.yml  exec.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: auth.py  dependencies.py  file_parser.py  main.py  models.py
data-spear/: __init__.py  access_control_audit.py  console_app.py  database.py  embedder.py  semantic_query_engine.py
data-spear-tui/: Cargo.toml
data-spear-tui/src/: main.rs
data_spear/: __init__.py  chunker.py  config.py  db.py  ingest.py  llm.py  rag.py  vector_store.py
data_spear/api/: main.py
mcp_server/: server.py
omnigraph/: agentic_rag.py  config.py  console_app.py  entity_relation_extractor.py  graph_builder.py  ingestion_pipeline.py
scripts/: data-spear.sh
tests/: conftest.py  test_api.py  test_chunker.py  test_db.py  test_ingest.py  test_llm_guards.py  test_rag.py
