[package]
name = "data-spear-tui"
version = "0.1.0"
edition = "2021"
description = "Rust TUI for Data-Spear RAG"

[dependencies]
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
